--- a/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
+++ b/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
@@ -1,4 +1,4 @@
-<app-base-popup [id]="id">
+<app-routing-popup>
   <form (ngSubmit)="onSubmit()" class="bg-ptb-gray-500 m-2 p-5 rounded-md h-full object-fill" #f="ngForm">
     <div class="grid grid-cols-1 gap-4">
       <div class="div-input-field" [ngClass]="{'border-red-700':groupName.touched && groupName.invalid}">
@@ -22,4 +22,4 @@
   </form>
   <br>
 
-</app-base-popup>
+</app-routing-popup>
