PTB-150: refactored structure of auth directory

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -27,12 +27,9 @@
             (click)="$event">
       Login
     </button>
-    <div class="btn btn-cancel cursor-pointer" (click)="$event">
+    <button class="btn btn-cancel cursor-pointer" type="button" (click)="$event">
       Cancel
-    </div>
-  </div>
-  <div class="btn bg-ptb-blue-600 cursor-pointer" (click)="$event">
-    No Account yet? Register Here!
+    </button>
   </div>
 
 </div>
