--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -24,18 +24,18 @@
       Password must be at least 8 characters long
     </div>
 
-    <div class="btn flex flex-row">
+    <div class="flex flex-row">
       <button class="btn btn-create cursor-pointer"
               type="submit" [disabled]="pwControl.invalid||emailControl.invalid">
         Login
       </button>
-      <div class="btn btn-cancel cursor-pointer" (click)="onCancel()">
+      <button class="btn btn-cancel cursor-pointer" type="button" (click)="onCancel()">
         Cancel
-      </div>
+      </button>
     </div>
-    <div class="btn bg-ptb-blue-600 cursor-pointer" (click)="onRegister()">
+    <button class="btn bg-ptb-blue-600 cursor-pointer" type="button" (click)="onRegister()">
       No Account yet? Register Here!
-    </div>
+    </button>
   </form>
 </div>
 
