--- a/src/app/hubpage/group-navigation-bar/group-list/group-item/group-item.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-item/group-item.component.html
@@ -1,5 +1,5 @@
 <div class="ptb-list-item">
-  <svg *ngIf="groupName" class="h-4 w-4 m-4 fill-current text-ptb-dark-blue-600" xmlns="http://www.w3.org/2000/svg"
+  <svg *ngIf="groupName" class="h-4 w-4 m-4 fill-current text-ptb-dark-blue-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg"
        viewBox="0 0 20 20"
        fill="currentColor">
     <path
