--- a/src/custom-tailwind/components/custom-items.css
+++ b/src/custom-tailwind/components/custom-items.css
@@ -1,5 +1,5 @@
 .ptb-list-item {
-  @apply bg-ptb-gray-400 rounded-md border-solid border border-ptb-gray-800 p-1 hover:bg-ptb-gray-300 cursor-pointer flex items-center
+  @apply bg-ptb-gray-400 rounded-md border-solid border border-ptb-gray-800 p-1 hover:bg-ptb-gray-300 cursor-pointer flex items-center transition duration-500 ease-in-out transform hover:scale-105
 }
 
 
