PTB-103: make memberlist dynamic to fill with invitations or memberships

--- a/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
+++ b/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
@@ -3,7 +3,17 @@
     <div class="text-md">{{ owner.name }}</div>
     <div class="text-md text-ptb-orange-600">{{ role.OWNER }}</div>
   </div>
-  <app-member-item *ngFor="let invitation of invitationService.invitations" [invitation]="invitation"></app-member-item>
-<!--   TODO add member items for group settings popup-->
-<!--  <app-member-item *ngFor="let userMembership of membershipService.userMembershipMap.get(group.id)"></app-member-item>-->
+
+  <div *ngIf="showInvitations == true">
+    <app-member-item *ngFor="let invitation of invitationService.invitations"
+                     [invitation]="invitation" [showInvitations]="showInvitations"></app-member-item>
+  </div>
+
+  <div *ngIf="showInvitations == false">
+    <app-member-item *ngFor="let userMembership of membershipService.userMembershipMap.get((groupService.currentGroup$ | async).id)"
+                     [membership]="userMembership" [showInvitations]="showInvitations"></app-member-item>
+  </div>
 </div>
+
+
+
