--- a/src/app/hubpage/group-navigation-bar/member-list/member-item/member-item.component.html
+++ b/src/app/hubpage/group-navigation-bar/member-list/member-item/member-item.component.html
@@ -1,9 +1,9 @@
 <div class="border border-ptb-gray-800 py-3 px-6 bg-white flex flex-grow flex-wrap items-center">
   <div class="text-md">
-    {{ invitation.email }}
+    {{ showInvitations ? invitation.email : membership.user.name }}
   </div>
   <div class="text-md text-ptb-orange-600 ml-auto">
-    {{ invitation.grantAdmin ? role.ADMIN : role.MEMBER }}
+    {{ showInvitations ? (invitation.grantAdmin ? role.ADMIN : role.MEMBER) : membership.role }}
   </div>
   <svg (click)="onDeleteInvitation()" class="h-4 w-4 fill-current text-ptb-gray-800 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
     <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
