PTB-102: add currentUser membership request

--- a/src/app/hubpage/group-navigation-bar/add-member-bar/add-member-bar.component.html
+++ b/src/app/hubpage/group-navigation-bar/add-member-bar/add-member-bar.component.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="my-auto">
-      <button type="submit" class="btn btn-create" [disabled]="emailControl.invalid">
+      <button type="submit" class="btn btn-add" [disabled]="emailControl.invalid">
         Add to group
       </button>
     </div>
