PTB-150: reworked login and registration page

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -17,16 +17,12 @@
       <label class="label-input-field" [ngClass]="{'border-red-700': pwControl.invalid}"
              for="pw"
       >Password </label>
-      <input class="input-field" id="pw"
-             type="password" placeholder="" ngModel minlength="8" required #pwControl="ngModel"/>
+      <input class="input-field" id="pw" name="pw"
+             type="password" placeholder="" ngModel minlength="8" #pwControl="ngModel"/>
     </div>
-    <div *ngIf="pwControl.errors?.minlength" class="text-red-700">
-      Password must be at least 8 characters long
-    </div>
-
     <div class="flex flex-row">
       <button class="btn btn-create cursor-pointer"
-              type="submit" [disabled]="pwControl.invalid||emailControl.invalid">
+              type="submit" [disabled]="(pwControl.invalid||!pwControl.touched)||emailControl.invalid">
         Login
       </button>
       <button class="btn btn-cancel cursor-pointer" type="button" (click)="onCancel()">
