--- a/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
+++ b/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
@@ -10,8 +10,11 @@
   </div>
 
   <div *ngIf="!showInvitations">
-    <app-member-item *ngFor="let userMembership of membershipService.groupMemberships"
+    <app-member-item (click)="onClickItem()" *ngFor="let userMembership of membershipService.groupMemberships"
                      [membership]="userMembership" [showInvitations]="showInvitations"></app-member-item>
+    <div *ngIf="display">
+      <app-popover [popover]="popover"></app-popover>
+    </div>
   </div>
 </div>
 
