PTB-102: delete data passing

--- a/src/app/popups/popover/owner-popover/owner-popover.component.html
+++ b/src/app/popups/popover/owner-popover/owner-popover.component.html
@@ -1,3 +1,3 @@
-<div>{{ data.kickMember }}</div>
-<div>{{ data.grantAdminRole }}</div>
+<button type="button" class="btn">Kick member</button>
+<button type="button" class="btn">Revoke admin role</button>
 
