--- a/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-edit-popup.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-edit-popup.component.html
@@ -13,7 +13,9 @@
       </label>
     </div>
 
-
+    <div id="add member">
+    <button class="btn" type="button" (click)="onAddMember()">Add member</button>
+    </div>
     <div class="flex flex-row justify-end space-x-4">
       <button type="submit" class="btn btn-create" [disabled]="!groupForm.valid">Apply</button>
       <button type="button" (click)="onCancel()" class="btn btn-cancel">Cancel</button>
