PTB-102: refactor showInvitation as Input value

--- a/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
+++ b/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
@@ -7,7 +7,7 @@
       </div>
 
       <div class="text-md italic">Already in group</div>
-      <app-member-list></app-member-list>
+      <app-member-list [showInvitations]="showInvitations"></app-member-list>
 
       <div class="text-md italic">Add member</div>
       <app-add-member-bar></app-add-member-bar>
