PTB-204: refactor member-list complexity

--- a/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
+++ b/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
@@ -1,7 +1,7 @@
 <div class="max-w-md">
   <div *ngIf="showInvitations" class="border border-ptb-gray-700 py-3 px-6 bg-white flex items-center justify-between">
     <div class="text-md">{{ owner.name }}</div>
-    <div class="text-md text-ptb-orange-600">{{ role.OWNER }}</div>
+    <div class="text-md text-ptb-orange-600">OWNER</div>
   </div>
 
 <!--  invitation-member list-->
