--- a/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-edit-popup.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-edit-popup.component.html
@@ -15,11 +15,12 @@
         </div>
       </div>
 
-      <div class="max-w-md grid grid-cols-1 gap-4">
+      <div class="grid grid-cols-1 gap-4">
         <div class="text-md italic">Group members</div>
         <app-member-list [showInvitations]="showInvitations"></app-member-list>
-
-        <button type="button" class="btn btn-add ml-auto">Add member</button>
+        <div class="max-w-md flex">
+          <button type="button" class="btn btn-add ml-auto">Add member</button>
+        </div>
       </div>
 
       <div class="text-md italic">Pending invitations</div>
