--- a/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
+++ b/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
@@ -1,30 +1,35 @@
-<div class="max-w-md">
-  <div *ngIf="showInvitations" class="border border-ptb-gray-700 py-3 px-6 bg-white flex items-center justify-between">
-    <div class="text-md">{{ owner.name }}</div>
-    <div class="text-md text-ptb-orange-600">OWNER</div>
-  </div>
+<div *ngIf="showInvitations" class="border border-ptb-gray-700 py-3 px-6 bg-white flex items-center justify-between">
+  <div class="text-md">{{ owner.name }}</div>
+  <div class="text-md text-ptb-orange-600">OWNER</div>
+</div>
 
 <!--  invitation-member list-->
-  <div *ngIf="showInvitations">
-    <app-member-item *ngFor="let invitation of invitationService.invitations"
-                     [invitation]="invitation" [showInvitations]="showInvitations"></app-member-item>
-  </div>
+<div *ngIf="showInvitations">
+  <app-member-item *ngFor="let invitation of invitationService.invitations"
+                   [invitation]="invitation" [showInvitations]="showInvitations"></app-member-item>
+</div>
 
 <!--  membership-list for admin & owner-->
-  <div *ngIf="!showInvitations && !this.membershipService.checkIfUserIsMember()">
-    <app-member-item (click)="onClickItem(userMembership)" *ngFor="let userMembership of membershipService.groupMemberships"
-                     [membership]="userMembership" [showInvitations]="showInvitations"></app-member-item>
-    <div *ngIf="display">
-      <app-popover [popover]="popover"></app-popover>
-    </div>
+<div *ngIf="!showInvitations && !this.membershipService.checkIfUserIsMember()" class="grid grid-cols-2 gap-2">
+  <div>
+    <app-member-item (click)="onClickItem(userMembership)"
+                     *ngFor="let userMembership of membershipService.groupMemberships"
+                     [membership]="userMembership" [showInvitations]="showInvitations">
+    </app-member-item>
   </div>
 
-<!--  membership-list for member-->
-  <div *ngIf="!showInvitations && this.membershipService.checkIfUserIsMember()">
-    <app-member-item *ngFor="let userMembership of membershipService.groupMemberships"
-                     [membership]="userMembership" [showInvitations]="showInvitations"></app-member-item>
+  <div *ngIf="display" class="w-2/5">
+    <app-popover [popover]="popover"></app-popover>
   </div>
 </div>
+
+<!--  membership-list for member-->
+<div *ngIf="!showInvitations && this.membershipService.checkIfUserIsMember()">
+  <app-member-item *ngFor="let userMembership of membershipService.groupMemberships"
+                   [membership]="userMembership" [showInvitations]="showInvitations"></app-member-item>
+</div>
+
+
 
 
 
