--- a/src/app/popups/popover/owner-popover/owner-popover.component.html
+++ b/src/app/popups/popover/owner-popover/owner-popover.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col space-y-2">
-  <button type="button" class="btn">Kick member</button>
-  <button type="button" class="btn">{{adminMessage}}</button>
+  <button type="button" class="btn btn-popover">Kick member</button>
+  <button type="button" class="btn btn-popover">{{adminMessage}}</button>
 </div>
 
 
