PTB-151: position item

--- a/src/app/startpage/startpage.component.html
+++ b/src/app/startpage/startpage.component.html
@@ -1,16 +1,20 @@
-<div id="image-header" class="h-1/2">
-  <img alt="ptb-icon" src="assets/img/icon.svg" class="flex items-center">
-</div>
+<div class="static h-screen w-screen">
 
-<div id="content" class="bg-ptb-gray-500">
-  <div class="mx-2 text-center">
-    <h2 class="text-gray-200 font-extrabold text-3xl xs:text-4xl md:text-5xl leading-tight">
-      PlaceToBeer
-    </h2>
-    <p>Your place - your friends - your rating</p>
-    <div class="inline-flex">
-      <button class="btn btn-add">Login</button>
-      <button class="btn btn-create">Learn More</button>
+  <div class="bg-ptb-blue-700 p-10 h-3/5">
+    <img alt="ptb-icon" src="assets/img/icon.svg" class="object-cover w-2/3 m-auto">
+  </div>
+
+
+  <div id="content" class="bg-ptb-gray-500 h-2/5">
+    <div class="mx-2 text-center">
+      <h2 class="text-ptb-gray-900 font-extrabold text-3xl xs:text-4xl md:text-5xl leading-tight">
+        PlaceToBeer
+      </h2>
+      <p>Your place - your friends - your rating</p>
+      <div class="inline-flex">
+        <button class="btn btn-add">Login</button>
+        <button class="btn btn-create">Learn More</button>
+      </div>
     </div>
   </div>
 
