--- a/src/app/startpage/startpage.component.html
+++ b/src/app/startpage/startpage.component.html
@@ -7,13 +7,14 @@
 
   <div id="content" class="bg-ptb-gray-500 h-2/5">
     <div class="mx-2 text-center">
-      <h2 class="text-ptb-gray-900 font-extrabold text-3xl xs:text-4xl md:text-5xl leading-tight">
-        PlaceToBeer
-      </h2>
-      <p>Your place - your friends - your rating</p>
-      <div class="inline-flex">
-        <button class="btn btn-add">Login</button>
-        <button class="btn btn-create">Learn More</button>
+      <img alt="ptb-icon" src="assets/img/text.svg" class="object-cover w-1/3 m-auto pt-10">
+<!--      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 102.09 41.34"><defs><style>.cls-1{font-size:16.31px;fill:#1d1d1b;font-family:SegoeScript-Bold, Segoe Script;font-weight:700;}</style></defs><g id="Ebene_2" data-name="Ebene 2"><g id="Ebene_1-2" data-name="Ebene 1"><text class="cls-1" transform="translate(0 13.7) scale(0.93 1)">Place to beer</text></g></g></svg>-->
+      <div>
+        <p class="text-5xl font-medium">Your place - Your friends - Your rating</p>
+        <div class="inline-flex space-x-4">
+          <button class="btn btn-add">Login</button>
+          <button class="btn btn-create">Learn More</button>
+        </div>
       </div>
     </div>
   </div>
