--- a/src/app/popups/popover/admin-popover/admin-popover.component.html
+++ b/src/app/popups/popover/admin-popover/admin-popover.component.html
@@ -1,4 +1,8 @@
-<div class="flex flex-col space-y-2">
-  <button type="button" class="btn btn-popover">Kick member</button>
+<div class="bg-ptb-gray-800 p-4">
+  <div class="flex flex-col space-y-2">
+    <button (click)="onKickMember()" type="button" class="btn btn-popover">Kick member</button>
+  </div>
 </div>
+
+
 
