PTB-102: add x button to popover

--- a/src/app/hubpage/group-navigation-bar/member-list/member-item/member-item.component.html
+++ b/src/app/hubpage/group-navigation-bar/member-list/member-item/member-item.component.html
@@ -1,4 +1,4 @@
-<div class="border border-ptb-gray-800 py-3 px-6 bg-white flex flex-grow flex-wrap items-center max-w-md">
+<div class="border border-ptb-gray-800 py-3 px-6 bg-white flex flex-grow flex-wrap items-center max-w-md cursor-pointer">
   <div class="text-md">
     {{ showInvitations ? invitation.email : membership.user.name }}
   </div>
