PTB-210: add proposal area

--- a/src/app/hubpage/hubpage.component.html
+++ b/src/app/hubpage/hubpage.component.html
@@ -2,7 +2,8 @@
 
 <div class="grid grid-cols-4 divide-x-2 divide-ptb-gray-500 h-full">
   <div class="col-span-3">
-    <app-placeholder></app-placeholder>
+    <app-placeholder *ngIf="(groupService.currentGroup$ | async) === null"></app-placeholder>
+    <app-proposal-area *ngIf="(groupService.currentGroup$ | async) !== null"></app-proposal-area>
   </div>
   <div class="bg-ptb-gray-100">
     <app-group-navigation-bar></app-group-navigation-bar>
