PTB-210: add html structure

--- a/src/app/hubpage/group-navigation-bar/group-navigation-bar.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-navigation-bar.component.html
@@ -1,6 +1,6 @@
 <div class="p-4">
   <app-group-list></app-group-list>
-  <button class="btn flex flex-row ml-auto" (click)="onCreateGroup()">Create Group</button>
+  <button class="btn btn-add flex flex-row ml-auto" (click)="onCreateGroup()">Create Group</button>
 </div>
 <div class="p-4">
   <app-invitation-list></app-invitation-list>
