--- a/src/app/hubpage/proposal-area/proposal-area.component.html
+++ b/src/app/hubpage/proposal-area/proposal-area.component.html
@@ -1,1 +1,7 @@
-<p>proposal-area works!</p>
+<div class="flex h-full justify-center heropattern-ilikefood-ptb-gray-600">
+  <div class="bg-ptb-gray-500 mt-20 p-5 rounded-md object-fill w-4/5 h-80 flex flex-col space-y-2">
+    <div class="text-2xl">Proposal list</div>
+    <app-proposal-list class="h-full"></app-proposal-list>
+    <button type="button" class="btn btn-add flex flex-row ml-auto">Add proposal</button>
+  </div>
+</div>
