--- a/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
+++ b/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
@@ -6,7 +6,7 @@
 <!--  invitation-member list-->
 <div *ngIf="showInvitations">
   <app-member-item *ngFor="let invitation of (invitationService.invitations$ | async)"
-                   [invitation]="invitation" [showInvitations]="showInvitations"></app-member-item>
+                   [invitation]="invitation" [showInvitations]="true"></app-member-item>
 </div>
 
 <!--  membership-list for admin & owner-->
@@ -14,7 +14,7 @@
   <div>
     <app-member-item (click)="onClickItem(userMembership)"
                      *ngFor="let userMembership of (membershipService.groupMemberships$ | async)"
-                     [membership]="userMembership" [showInvitations]="showInvitations">
+                     [membership]="userMembership" [showInvitations]="false">
     </app-member-item>
   </div>
 
@@ -26,7 +26,7 @@
 <!--  membership-list for member-->
 <div *ngIf="!showInvitations && this.membershipService.checkIfUserIsMember()">
   <app-member-item *ngFor="let userMembership of (membershipService.groupMemberships$ | async)"
-                   [membership]="userMembership" [showInvitations]="showInvitations"></app-member-item>
+                   [membership]="userMembership" [showInvitations]="false"></app-member-item>
 </div>
 
 
