PTB-103: fixed that the OWNER always shows 🤣🔫

--- a/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-edit-popup.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-edit-popup.component.html
@@ -17,14 +17,14 @@
 
       <div class="grid grid-cols-1 gap-4">
         <div class="text-md italic">Group members</div>
-        <app-member-list [showInvitations]="false"></app-member-list>
+        <app-member-list [showInvitations]="false" [newGroup]="false"></app-member-list>
         <div class="max-w-md flex">
           <button type="button" class="btn btn-add ml-auto">Add member</button>
         </div>
       </div>
       <div class="grid grid-cols-1 gap-4">
         <div class="text-md italic">Pending invitations</div>
-        <app-member-list [showInvitations]="true"></app-member-list>
+        <app-member-list [showInvitations]="true" [newGroup]="false"></app-member-list>
       </div>
       <p>Pending invitation list coming soon!</p>
 
