PTB-210: add create proposal request

--- a/src/app/hubpage/proposal-area/add-proposal-popup/add-proposal-popup.component.html
+++ b/src/app/hubpage/proposal-area/add-proposal-popup/add-proposal-popup.component.html
@@ -12,7 +12,7 @@
       <!-- dropdown -->
       <div class="text-md italic">Choose an activity type</div>
       <div class="relative inline-flex">
-        <select class="border border-gray-300 rounded-full text-gray-600 h-10 pl-5 pr-10 bg-white hover:border-gray-400 focus:outline-none appearance-none">
+        <select id="activityType" name="activityType" class="border border-gray-300 rounded-full text-gray-600 h-10 pl-5 pr-10 bg-white hover:border-gray-400 focus:outline-none appearance-none" ngModel>
           <option>Bar</option>
           <option>Restaurant</option>
           <option>Sport</option>
