PTB-210: add proposal list and item content

--- a/src/app/hubpage/proposal-area/add-proposal-popup/add-proposal-popup.component.html
+++ b/src/app/hubpage/proposal-area/add-proposal-popup/add-proposal-popup.component.html
@@ -19,7 +19,7 @@
           <option>Games</option>
           <option>Swimming Area</option>
           <option>Club</option>
-          <option>Parc</option>
+          <option>Park</option>
           <option>Other</option>
         </select>
       </div>
