PTB-103: added further specifcations to get invitation Id in member-list.component.ts

--- a/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
+++ b/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
@@ -14,7 +14,9 @@
 <div *ngIf="showInvitations && pendInv">
   <app-member-item *ngFor="let invitation of (invitationService.groupInvitations$ | async); let i = index"
                    [invitation]="invitation" [showInvitations]="true"
-                   [invitationId]="invitationService.groupInvitationsId[i]"></app-member-item>
+                   [invitationId]="invitationService.groupInvitationsId[i]"
+                   (click)="onClickInv(invitationService.groupInvitationsId[i])"
+  ></app-member-item>
 </div>
 
 <!--  membership-list for admin & owner-->
