PTB-103: fixed some displaying issues

--- a/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-edit-popup.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-edit-popup.component.html
@@ -24,7 +24,7 @@
       </div>
       <div class="grid grid-cols-1 gap-4">
         <div class="text-md italic">Pending invitations</div>
-        <app-member-list [showInvitations]="true" [newGroup]="false" [pendInv]="true"></app-member-list>
+        <app-group-invitation-list></app-group-invitation-list>
       </div>
       <p>Pending invitation list coming soon!</p>
 
