--- a/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-invitation-list/group-invitation-list.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-invitation-list/group-invitation-list.component.html
@@ -1,8 +1,8 @@
 <!--  pending-groupInvitation list-->
-<app-member-item *ngFor="let invitation of (invitationService.groupInvitations$ | async)"
-                 [invitation]="invitation"
+<app-group-invitation-item *ngFor="let invitation of (invitationService.groupInvitations$ | async)"
+                 [groupInvitation]="invitation"
                  (click)="onClickInv(invitation.id)"
-></app-member-item>
+></app-group-invitation-item>
 
 
 
