PTB-103: removed some code that has now become unnecessary. going to sleep rn

--- a/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
+++ b/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
@@ -8,7 +8,7 @@
 
       <div class="text-md italic">Already in group</div>
       <div class="max-w-md">
-        <app-member-list [showInvitations]="true" [newGroup]="true" [pendInv]="false"></app-member-list>
+        <app-member-list [showInvitations]="true" [newGroup]="true"></app-member-list>
       </div>
 
       <div class="text-md italic">Add member</div>
