--- a/src/app/startpage/startpage.component.html
+++ b/src/app/startpage/startpage.component.html
@@ -6,16 +6,29 @@
 
 
   <div id="content" class="bg-ptb-gray-500 h-2/5">
-    <div class="mx-2 text-center">
-      <img alt="ptb-icon" src="assets/img/text.svg" class="object-cover w-1/3 m-auto pt-10 pb-0">
-<!--      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 102.09 41.34"><defs><style>.cls-1{font-size:16.31px;fill:#1d1d1b;font-family:SegoeScript-Bold, Segoe Script;font-weight:700;}</style></defs><g id="Ebene_2" data-name="Ebene 2"><g id="Ebene_1-2" data-name="Ebene 1"><text class="cls-1" transform="translate(0 13.7) scale(0.93 1)">Place to beer</text></g></g></svg>-->
-      <div>
-        <p class="text-4xl font-normal text-ptb-gray-900">Your place - Your friends - Your rating</p>
-        <div class="space-x-4">
-          <button class="btn btn-add">Login</button>
-          <button class="btn btn-create" (click)="onLearnMore()">Learn More</button>
-        </div>
+    <div class="mx-2 text-center space-y-4">
+      <svg class="w-1/3 m-auto pt-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 102.09 20">
+        <defs>
+          <style>.cls-1 {
+            font-size: 16.31px;
+            fill: #1d1d1b;
+            font-family: SegoeScript-Bold, Segoe Script;
+            font-weight: 700;
+          }</style>
+        </defs>
+        <g id="Ebene_2" data-name="Ebene 2">
+          <g id="Ebene_1-2" data-name="Ebene 1">
+            <text class="cls-1" transform="translate(0 13.7) scale(0.93 1)">Place to beer</text>
+          </g>
+        </g>
+      </svg>
+
+      <div class="text-4xl font-normal text-ptb-gray-900">Your place - Your friends - Your rating</div>
+      <div class="space-x-4">
+        <button class="btn btn-add">Login</button>
+        <button class="btn btn-create" (click)="onLearnMore()">Learn More</button>
       </div>
+
     </div>
   </div>
 
