PTB-176: add icon to tab

--- a/src/app/startpage/startpage.component.html
+++ b/src/app/startpage/startpage.component.html
@@ -25,7 +25,7 @@
 
       <div class="text-4xl font-normal text-ptb-gray-900">Your place - Your friends - Your rating</div>
       <div class="space-x-4">
-        <button class="btn btn-add">Login</button>
+        <button class="btn btn-add" (click)="onLogin()">Login</button>
         <button class="btn btn-create" (click)="onLearnMore()">Learn More</button>
       </div>
 
