--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -10,6 +10,14 @@
            type="text" placeholder="email" ngModel pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required
            #emailControl="ngModel"/>
   </div>
+  <div class="flex flex-col div-input-field">
+    <label class="label-input-field" [ngClass]="{'border-red-700': nameControl.invalid}"
+           for="name">
+      Name
+    </label>
+    <input id="name" name="name" class="input-field"
+           type="text" placeholder="" ngModel minlength="1" #nameControl="ngModel"/>
+  </div>
   <div class="flex flex-col div-input-field"
        [ngClass]="{'border-red-700': pwControl.touched && pwControl.invalid}">
     <label class="label-input-field" [ngClass]="{'border-red-700': pwControl.invalid}"
