--- a/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-edit-popup.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-edit-popup.component.html
@@ -18,8 +18,13 @@
       <div class="grid grid-cols-1 gap-4">
         <div class="text-md italic">Group members</div>
         <app-member-list [showInvitations]="false" [newGroup]="false"></app-member-list>
-        <div class="max-w-md flex">
-          <button type="button" class="btn btn-add ml-auto">Add member</button>
+        <div class="grid grid-cols-2 gap-4">
+          <div class="max-w-md flex">
+            <button (click)="onAddSingleMember()" type="button" class="btn btn-add ml-auto">Add member</button>
+          </div>
+          <div *ngIf="displayInvitation" class="w-2/5">
+            <app-popover [popover]="popover"></app-popover>
+          </div>
         </div>
       </div>
       <div class="grid grid-cols-1 gap-4">
