--- a/src/app/error/error-page/error-page.component.html
+++ b/src/app/error/error-page/error-page.component.html
@@ -1,1 +1,9 @@
-{{message}}
+<div class="flex flex-row space-x-4 h-full items-center justify-center">
+
+  <img alt="ptb-icon" src="assets/img/broken-bottle.svg" class="object-contain w-40">
+  <div class="">
+    <div class="text-2xl">There was an error!</div>
+    <div class="text-3xl text-gray-800 font-semibold">{{message}}</div>
+  </div>
+</div>
+
