--- a/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-invitation-list/group-invitation-item/group-invitation-item.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-invitation-list/group-invitation-item/group-invitation-item.component.html
@@ -3,6 +3,6 @@
     {{ groupInvitation.mail }}
   </div>
   <div class="text-md text-ptb-orange-600 ml-auto">
-    {{ groupInvitation.grantAdmin ? role.ADMIN : role.MEMBER }}
+    {{role}}
   </div>
 </div>
