--- a/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
+++ b/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="showInvitations && newGroup" class="border border-ptb-gray-700 py-3 px-6 bg-white flex items-center justify-between">
-  <div class="text-md">{{ owner.name }}</div>
+  <div class="text-md">{{ this.accountService.user.name }}</div>
   <div class="text-md text-ptb-orange-600">OWNER</div>
 </div>
 
